--- a/ETL_Mini_Project_Starter_Code.ipynb
+++ b/ETL_Mini_Project_Starter_Code.ipynb
@@ -2679,6 +2679,8 @@
     "    converted_data = json.loads(data)  # Convert the JSON string into a Python dictionary\n",
     "    # Iterate through each dictionary (row) and get the values for each row using list comprehension.\n",
     "    row_values = [v for k, v in converted_data.items()]  # Collect all values from the dictionary into a list\n",
+    "    #This line uses a list comprehension to iterate over the key-value pairs in the `converted_data` dictionary. \n",
+    "    #It collects all the values (`v`) into a list called `row_values`.\n",
     "    # Append the list of values for each row to a list. \n",
     "    dict_values.append(row_values)  # Add the list of values to the main list\n",
     "\n",
@@ -2773,64 +2775,403 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check the datatypes.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a \"first\"name\" and \"last_name\" column with the first and last names from the \"name\" column. \n",
-    "\n",
-    "\n",
-    "# Drop the contact_name column\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Reorder the columns\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check the datatypes one more time before exporting as CSV file.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'contacts_df_clean' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[37], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Export the DataFrame as a CSV file. \u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mcontacts_df_clean\u001b[49m\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mResources/contacts.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mutf8\u001b[39m\u001b[38;5;124m'\u001b[39m, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'contacts_df_clean' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column      Non-Null Count  Dtype \n",
+      "---  ------      --------------  ----- \n",
+      " 0   contact_id  1000 non-null   int64 \n",
+      " 1   name        1000 non-null   object\n",
+      " 2   email       1000 non-null   object\n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 23.6+ KB\n"
      ]
     }
    ],
    "source": [
+    "# Check the datatypes.\n",
+    "contacts_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>contact_id</th>\n",
+       "      <th>email</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4661</td>\n",
+       "      <td>cecilia.velasco@rodrigues.fr</td>\n",
+       "      <td>Cecilia</td>\n",
+       "      <td>Velasco</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3765</td>\n",
+       "      <td>mariana.ellis@rossi.org</td>\n",
+       "      <td>Mariana</td>\n",
+       "      <td>Ellis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4187</td>\n",
+       "      <td>sofie.woods@riviere.com</td>\n",
+       "      <td>Sofie</td>\n",
+       "      <td>Woods</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4941</td>\n",
+       "      <td>jeanette.iannotti@yahoo.com</td>\n",
+       "      <td>Jeanette</td>\n",
+       "      <td>Iannotti</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2199</td>\n",
+       "      <td>samuel.sorgatz@gmail.com</td>\n",
+       "      <td>Samuel</td>\n",
+       "      <td>Sorgatz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>3684</td>\n",
+       "      <td>whitney.noack@laboratorios.org</td>\n",
+       "      <td>Whitney</td>\n",
+       "      <td>Noack</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>5784</td>\n",
+       "      <td>gelsomina.migliaccio@junk.com</td>\n",
+       "      <td>Gelsomina</td>\n",
+       "      <td>Migliaccio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>1498</td>\n",
+       "      <td>evangelista.pereira@thompson-peterson.biz</td>\n",
+       "      <td>Evangelista</td>\n",
+       "      <td>Pereira</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>6073</td>\n",
+       "      <td>gareth.comolli@tiscali.fr</td>\n",
+       "      <td>Gareth</td>\n",
+       "      <td>Comolli</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>4939</td>\n",
+       "      <td>michelangelo.hess@bouygtel.fr</td>\n",
+       "      <td>Michelangelo</td>\n",
+       "      <td>Hess</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     contact_id                                      email    first_name  \\\n",
+       "0          4661               cecilia.velasco@rodrigues.fr       Cecilia   \n",
+       "1          3765                    mariana.ellis@rossi.org       Mariana   \n",
+       "2          4187                    sofie.woods@riviere.com         Sofie   \n",
+       "3          4941                jeanette.iannotti@yahoo.com      Jeanette   \n",
+       "4          2199                   samuel.sorgatz@gmail.com        Samuel   \n",
+       "..          ...                                        ...           ...   \n",
+       "995        3684             whitney.noack@laboratorios.org       Whitney   \n",
+       "996        5784              gelsomina.migliaccio@junk.com     Gelsomina   \n",
+       "997        1498  evangelista.pereira@thompson-peterson.biz   Evangelista   \n",
+       "998        6073                  gareth.comolli@tiscali.fr        Gareth   \n",
+       "999        4939              michelangelo.hess@bouygtel.fr  Michelangelo   \n",
+       "\n",
+       "      last_name  \n",
+       "0       Velasco  \n",
+       "1         Ellis  \n",
+       "2         Woods  \n",
+       "3      Iannotti  \n",
+       "4       Sorgatz  \n",
+       "..          ...  \n",
+       "995       Noack  \n",
+       "996  Migliaccio  \n",
+       "997     Pereira  \n",
+       "998     Comolli  \n",
+       "999        Hess  \n",
+       "\n",
+       "[1000 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a \"first\"name\" and \"last_name\" column with the first and last names from the \"name\" column. \n",
+    "contacts_df[['first_name', 'last_name']] = contacts_df['name'].str.split(' ', n=1, expand=True)\n",
+    "\n",
+    "# Drop the contact_name column\n",
+    "contacts_df = contacts_df.drop(columns=['name'])\n",
+    "contacts_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>contact_id</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4661</td>\n",
+       "      <td>Cecilia</td>\n",
+       "      <td>Velasco</td>\n",
+       "      <td>cecilia.velasco@rodrigues.fr</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3765</td>\n",
+       "      <td>Mariana</td>\n",
+       "      <td>Ellis</td>\n",
+       "      <td>mariana.ellis@rossi.org</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4187</td>\n",
+       "      <td>Sofie</td>\n",
+       "      <td>Woods</td>\n",
+       "      <td>sofie.woods@riviere.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4941</td>\n",
+       "      <td>Jeanette</td>\n",
+       "      <td>Iannotti</td>\n",
+       "      <td>jeanette.iannotti@yahoo.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2199</td>\n",
+       "      <td>Samuel</td>\n",
+       "      <td>Sorgatz</td>\n",
+       "      <td>samuel.sorgatz@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>3684</td>\n",
+       "      <td>Whitney</td>\n",
+       "      <td>Noack</td>\n",
+       "      <td>whitney.noack@laboratorios.org</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>5784</td>\n",
+       "      <td>Gelsomina</td>\n",
+       "      <td>Migliaccio</td>\n",
+       "      <td>gelsomina.migliaccio@junk.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>1498</td>\n",
+       "      <td>Evangelista</td>\n",
+       "      <td>Pereira</td>\n",
+       "      <td>evangelista.pereira@thompson-peterson.biz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>6073</td>\n",
+       "      <td>Gareth</td>\n",
+       "      <td>Comolli</td>\n",
+       "      <td>gareth.comolli@tiscali.fr</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>4939</td>\n",
+       "      <td>Michelangelo</td>\n",
+       "      <td>Hess</td>\n",
+       "      <td>michelangelo.hess@bouygtel.fr</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     contact_id    first_name   last_name  \\\n",
+       "0          4661       Cecilia     Velasco   \n",
+       "1          3765       Mariana       Ellis   \n",
+       "2          4187         Sofie       Woods   \n",
+       "3          4941      Jeanette    Iannotti   \n",
+       "4          2199        Samuel     Sorgatz   \n",
+       "..          ...           ...         ...   \n",
+       "995        3684       Whitney       Noack   \n",
+       "996        5784     Gelsomina  Migliaccio   \n",
+       "997        1498   Evangelista     Pereira   \n",
+       "998        6073        Gareth     Comolli   \n",
+       "999        4939  Michelangelo        Hess   \n",
+       "\n",
+       "                                         email  \n",
+       "0                 cecilia.velasco@rodrigues.fr  \n",
+       "1                      mariana.ellis@rossi.org  \n",
+       "2                      sofie.woods@riviere.com  \n",
+       "3                  jeanette.iannotti@yahoo.com  \n",
+       "4                     samuel.sorgatz@gmail.com  \n",
+       "..                                         ...  \n",
+       "995             whitney.noack@laboratorios.org  \n",
+       "996              gelsomina.migliaccio@junk.com  \n",
+       "997  evangelista.pereira@thompson-peterson.biz  \n",
+       "998                  gareth.comolli@tiscali.fr  \n",
+       "999              michelangelo.hess@bouygtel.fr  \n",
+       "\n",
+       "[1000 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reorder the columns\n",
+    "contacts_df_order = ['contact_id','first_name', 'last_name', 'email']  # Add other columns as needed\n",
+    "\n",
+    "# Step 2: Reorder the DataFrame columns\n",
+    "contacts_df = contacts_df[contacts_df_order]\n",
+    "\n",
+    "contacts_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method DataFrame.info of      contact_id    first_name   last_name  \\\n",
+      "0          4661       Cecilia     Velasco   \n",
+      "1          3765       Mariana       Ellis   \n",
+      "2          4187         Sofie       Woods   \n",
+      "3          4941      Jeanette    Iannotti   \n",
+      "4          2199        Samuel     Sorgatz   \n",
+      "..          ...           ...         ...   \n",
+      "995        3684       Whitney       Noack   \n",
+      "996        5784     Gelsomina  Migliaccio   \n",
+      "997        1498   Evangelista     Pereira   \n",
+      "998        6073        Gareth     Comolli   \n",
+      "999        4939  Michelangelo        Hess   \n",
+      "\n",
+      "                                         email  \n",
+      "0                 cecilia.velasco@rodrigues.fr  \n",
+      "1                      mariana.ellis@rossi.org  \n",
+      "2                      sofie.woods@riviere.com  \n",
+      "3                  jeanette.iannotti@yahoo.com  \n",
+      "4                     samuel.sorgatz@gmail.com  \n",
+      "..                                         ...  \n",
+      "995             whitney.noack@laboratorios.org  \n",
+      "996              gelsomina.migliaccio@junk.com  \n",
+      "997  evangelista.pereira@thompson-peterson.biz  \n",
+      "998                  gareth.comolli@tiscali.fr  \n",
+      "999              michelangelo.hess@bouygtel.fr  \n",
+      "\n",
+      "[1000 rows x 4 columns]>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the datatypes one more time before exporting as CSV file.\n",
+    "from pprint import pprint\n",
+    "pprint(contacts_df.info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Export the DataFrame as a CSV file. \n",
-    "contacts_df_clean.to_csv(\"Resources/contacts.csv\", encoding='utf8', index=False)"
+    "contacts_df.to_csv(\"Resources/contacts.csv\", encoding='utf8', index=False)"
    ]
   },
   {
